--- a/.github/workflows/playwright-workflow.yaml
+++ b/.github/workflows/playwright-workflow.yaml
@@ -20,5 +20,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Playwright dependencies
+        run: npx playwright install
+
+      - name: Compile TypeScript
+        run: npx tsc
+
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npx playwright test --config=playwright.config.ts
